# wire_finder

./: CMakeLists.txt  cameramodel.h  cl_utils.cpp  cl_utils.h  cl_utils0.cpp  cl_utils0.h  cmplines.cl  cmplines.cpp  cmplines.h  defs.h  hough.cl  hough.cpp  hough.h  hough_test.cpp  info.cpp  kalmanline.h  kernel.cl  linepool.cpp  linepool.h  linepool_test.cpp  main.cpp
test/: CMakeLists.txt  cameramodel_test.cpp  cl_utils_test.cpp  gtest_utils.h  hough_test.cpp  kalmanline_test.cpp  test.cpp
